objects/Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offering_Id__c</fullName>
        <label>Offering Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Name__c</fullName>
        <formula>IF(Offering_Id__c==&apos;Intuit.sbe.salsa.default&apos;,&apos;QBO&apos;, 
IF(Offering_Id__c==&apos;Intuit.smallbusiness.agentdata.kabini&apos;,&apos;Payroll&apos;, 
IF(Offering_Id__c==&apos;Intuit.smallbusiness.agentdata.shortterm&apos;,&apos;Payroll&apos;,&apos;&apos; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Composite_Key__c</fullName>
        <externalId>true</externalId>
        <label>Role Composite Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role_Id__c</fullName>
        <label>Role Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>